@@ -62,6 +62,7 @@ unsigned long int strtoul(const char *nptr, char **endptr, int base)
   unsigned long int ret;
   bool range_error = false;
   bool neg = false;
+  unsigned char b = base;
 
   while (isblank (*ptr))
     ptr++;
@@ -76,34 +77,34 @@ unsigned long int strtoul(const char *nptr, char **endptr, int base)
     }
 
   // base not specified.
-  if (!base)
+  if (!b)
     {
       if (!strncmp (ptr, "0x", 2) || !strncmp (ptr, "0X", 2))
         {
-          base = 16;
+          b = 16;
           ptr += 2;
         }
       else if (!strncmp (ptr, "0b", 2) || !strncmp (ptr, "0B", 2))
         {
-          base = 2;
+          b = 2;
           ptr += 2;
         }
       else if (*ptr == '0')
         {
-          base = 8;
+          b = 8;
           ptr++;
         }
       else
-        base = 10;
+        b = 10;
     }
   // Handle optional hex prefix.
-  else if (base == 16 && (!strncmp (ptr, "0x", 2) || !strncmp (ptr, "0X", 2)))
+  else if (b == 16 && (!strncmp (ptr, "0x", 2) || !strncmp (ptr, "0X", 2)))
     ptr += 2;
-  else if (base == 2 && (!strncmp (ptr, "0b", 2) || !strncmp (ptr, "0B", 2)))
+  else if (b == 2 && (!strncmp (ptr, "0b", 2) || !strncmp (ptr, "0B", 2)))
     ptr += 2;
 
   // Empty sequence conversion error
-  if (_isdigit (*ptr, base) < 0)
+  if (_isdigit (*ptr, b) < 0)
     {
       if (endptr)
         *endptr = (char*)nptr;
@@ -112,22 +113,21 @@ unsigned long int strtoul(const char *nptr, char **endptr, int base)
 
   for (ret = 0;; ptr++)
     {
-      unsigned long int oldret;
-      signed char digit = _isdigit (*ptr, base);
+      signed char digit = _isdigit (*ptr, b);
 
       if (digit < 0)
         break;
-
-      oldret = ret;
+  
 #if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
-      range_error |= ckd_mul (&ret, ret, base);
-      range_error |= ckd_add (&ret, ret, (unsigned char)digit);
+      range_error |= ckd_mul (&ret, ret, b);
+      range_error |= ckd_add (&ret, ret, digit);
 #else
-      ret *= base;
+      unsigned long int oldret = ret;
+      ret *= b;
       if (ret < oldret)
         range_error = true;
       ret += (unsigned char)digit;
-#warning INEXACT RANGE ERROR CHECK WILL NOT REPORT ALL OVERFLOWS (fix by implementing ckd_mul support)
+#warning INEXACT RANGE ERROR CHECK WILL NOT REPORT ALL OVERFLOWS (fix by implementing ckd_mul and ckd_add)
 #endif
     }
 
